# unbl-documentation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  404.html  CHANGELOG.md  FILE_PURPOSES.md  Makefile  QUICKSTART.md  README.md  README.rst  TRANSLATION_GUIDE.md  conf.py  environment-mkdocs.yaml  environment.yaml  index.html  index.rst  mkdocs.yml  pyproject.toml  sitemap.xml
_templates/: layout.html
docs/: conf.py  data_list.rst  glossary.rst  index.es.md  index.fr.md  index.md  index.pt.md  index.ru.md  license.rst
docs/elsa/: 01_overview.es.md  01_overview.fr.md  01_overview.md  01_overview.pt.md  01_overview.ru.md  02_tool_purpose.fr.md  02_tool_purpose.md  02_tool_purpose.pt.md  02_tool_purpose.ru.md  03_registration.es.md  03_registration.fr.md  03_registration.md  03_registration.pt.md  03_registration.ru.md  04_creating_analysis.fr.md  04_creating_analysis.md  04_creating_analysis.pt.md  04_creating_analysis.ru.md  05_editing_analysis.es.md  05_editing_analysis.fr.md  05_editing_analysis.md  05_editing_analysis.ru.md  06_running_optimization.fr.md  06_running_optimization.md  06_running_optimization.ru.md  07_viewing_heatmaps.fr.md  07_viewing_heatmaps.md  07_viewing_heatmaps.ru.md  08_downloading_results.es.md  08_downloading_results.fr.md  08_downloading_results.md  08_downloading_results.ru.md  09_analyse_synergies.fr.md  (+16 more)
elsa/: index.html
es/: index.html
fr/: index.html
pt/: index.html
ru/: index.html
scripts/: setup.sh
search/: search_index.json
unbl-public-platform/: index.html
unbl-workspaces/: index.html
(+615 files in other folders)
